--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,21 @@ html {
   box-sizing: inherit;
 }
 
+.card {
+  display: block;
+}
+
 .card-body {
   font-size: 1.5rem;
 }
 
 .card-img {
   width: 50px;
+  margin: .75em;
+}
+
+div {
+  display: inline-block;
 }
 
 header {
@@ -38,7 +47,7 @@ h2 {
 
 @media only screen and (min-width: 25em) {
 
-  nav li {
+  .card {
     display: inline-block;
     text-align: center;
   }
@@ -67,15 +76,11 @@ h2 {
     text-align: left;
   }
 
-  h1,
-  nav {
-    display: inline-block;
-    vertical-align: middle;
-  }
-
   h1 {
     margin-bottom: 0;
     margin-right: .75em;
+    display: inline-block;
+    vertical-align: middle;
   }
 
 }
