--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ html {
   margin: .75em;
 }
 
+p {
+  margin: 0 auto;
+}
+
 div {
   display: inline-block;
 }
@@ -41,7 +45,7 @@ header {
 }
 
 h2 {
-  margin: 0 0 .5rem;
+  margin: 0 auto;
   font-size: 1.5rem;
 }
 
@@ -76,10 +80,9 @@ h2 {
     text-align: left;
   }
 
-  h1 {
+  h2 {
     margin-bottom: 0;
     margin-right: .75em;
-    display: inline-block;
     vertical-align: middle;
   }
 
