--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,11 @@ html {
   margin: .75em;
 }
 
+.card-icon {
+  width: 100%;
+  text-align: center;
+}
+
 p {
   margin: 0 auto;
 }
@@ -47,6 +52,11 @@ header {
 h2 {
   margin: 0 auto;
   font-size: 1.5rem;
+}
+
+section {
+  max-width: 20em;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 25em) {
@@ -88,6 +98,7 @@ h2 {
 
   section {
     display: flex;
+    max-width: none;
   }
 
 }
