--- a/css/main.css
+++ b/css/main.css
@@ -17,15 +17,15 @@ html {
   box-sizing: inherit;
 }
 
-.card {
+.cards {
   display: block;
 }
 
-.card-body {
+.card-body h2 {
   font-size: 1.5rem;
 }
 
-.card-img {
+.card-img img {
   width: 50px;
   margin: .75em;
 }
