--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,9 @@ html {
 }
 
 .card-img img {
+  display: block;
   width: 50px;
-  margin: .75em;
+  margin: 0 auto;
 }
 
 .card-icon {
@@ -59,11 +60,6 @@ h2 {
   font-size: 1.5rem;
 }
 
-section {
-  max-width: 20em;
-  margin: 0 auto;
-}
-
 @media only screen and (min-width: 25em) {
 
   .card {
@@ -78,6 +74,11 @@ section {
   html {
     font-size: 110%;
     line-height: 1.4;
+  }
+
+  .cards {
+    display: flex;
+    list-style-type: none;
   }
 
 }
@@ -101,11 +102,6 @@ section {
     vertical-align: middle;
   }
 
-  section {
-    display: flex;
-    max-width: none;
-  }
-
 }
 
 @media only screen and (min-width: 90em) {
@@ -114,11 +110,11 @@ section {
     font-size: 130%;
   }
 
-  section {
+  ul {
     display: flex;
   }
 
-  .card-icon {
+  .card-img {
     display: inline-block;
     width: 15%;
     vertical-align: middle;
