--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,17 @@ h2 {
     list-style-type: none;
   }
 
+  .card-img img {
+    display: block;
+    width: 50px;
+    margin: 0 auto;
+    padding-bottom: 1.4rem;
+  }
+
+  .card-content {
+    margin-bottom: 1.4rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -89,6 +100,17 @@ h2 {
   html {
     font-size: 120%;
     line-height: 1.5;
+  }
+
+  .card-img img {
+    display: block;
+    width: 50px;
+    margin: 0 auto;
+    padding-bottom: 1.5rem;
+  }
+
+  .card-content {
+    margin-bottom: 1.5rem;
   }
 
   header {
